Font and Alignment Correction

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,7 @@
 body {
   background-color: #f3f3f3;
   font-family: "Cabinet Grotesk", Arial, sans-serif;
+  font-weight: 500;
 }
 
 .page {
