--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -30,6 +30,7 @@
   line-height: 24px;
   letter-spacing: 0%;
   margin: 0;
+  margin-top: 5px;
 }
 
 .header__user-container {
@@ -37,6 +38,7 @@
   flex-direction: row;
   align-items: center;
   gap: 12px;
+  margin-top: 5px;
 }
 
 .header__button {
@@ -48,6 +50,7 @@
   font-weight: 700;
   line-height: 24px;
   letter-spacing: 0%;
+  margin-top: 5px;
 }
 
 .header__user-name {
