--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -15,7 +15,7 @@
   margin: 0;
   color: #000;
   font-size: 16px;
-  font-weight: 700;
+  font-weight: 500;
   line-height: 20px;
   letter-spacing: 0%;
   opacity: 0.6;
