--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -6,3 +6,12 @@
   list-style: none;
   gap: 21px;
 }
+
+.cards__title {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 20px;
+  letter-spacing: 0%;
+  margin-top: 40px;
+  margin-bottom: 34px;
+}
