--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -21,6 +21,7 @@
   letter-spacing: 0%;
   color: #000;
   margin: 0;
+  white-space: nowrap;
 }
 
 .modal__close-button {
@@ -29,8 +30,17 @@
   right: 28px;
   width: 20px;
   height: 20px;
-  background-color: #0000004d;
+  background: transparent;
   border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.modal__close-icon {
+  width: 14px;
+  height: 14px;
 }
 
 .modal__container {
@@ -60,6 +70,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  font-weight: 700;
 }
 
 .modal__radio-fieldset {
@@ -82,6 +93,44 @@
   color: #000;
 }
 
+.modal__radio {
+  margin-right: 5px;
+}
+
 .modal__radio-label {
   display: flex;
+  opacity: 1;
+  font-weight: 700;
+}
+
+.modal__button {
+  width: 124px;
+  height: 36px;
+  padding: 8px 16px;
+  background-color: #000;
+  border-radius: 4px;
+  border: none;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20px;
+  letter-spacing: 0%;
+}
+
+.modal__button:hover {
+  background-color: #000;
+  opacity: 0.6;
+}
+
+.modal__input {
+  border: none;
+  border-bottom: 1px solid #000;
+  outline: none;
+  padding: 8px 0 4px 0;
+  background: transparent;
+  font-size: 16px;
+}
+
+.modal__input::placeholder {
+  font-weight: 700;
 }
